add lambda api key to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 OPENAI_API_KEY="PUT_YOUR_OPENAI_API_KEY_HERE"
 HUGGINGFACE_TOKEN="PUT_YOUR_HUGGINGFACE_TOKEN_HERE"
+LAMBDA_API_KEY="PUT_YOUR_LAMBDA_API_KEY_HERE"
